--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "classnames": "^2.2.6",
     "lodash": "^4.17.11",
     "react": "^16.6.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.6.0",
+    "react-flexbox-grid": "^2.1.2",
+    "react-popover": "^0.5.10",
     "react-scripts": "2.0.5"
   },
   "scripts": {
@@ -44,8 +47,6 @@
     "pretty-quick": "^1.8.0"
   },
   "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged"
-    }
+
   }
 }
